# atmega328P-emulator

./: CMakeLists.txt  LICENSE  README.md  Software Requirements Specification Document.docx
cmake/: Emscripten.cmake
src/: decoder.cpp  decoder.h  executor.cpp  executor.h  loader.cpp  loader.h  main.cpp  state.h
